# weights-to-harmonic-midi

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
legacy/notebooks/: 01_llm_orchestra_midi_sf.ipynb  02_llm_house_acid_sonification.ipynb  03_activation_album.ipynb
legacy/scripts/: README.md
notebooks/: 04_jepa_house_train.ipynb
src/audio/: dsp_engine.py  harmonic_math.py
src/core/: bridge.py  hooks.py  model_runner.py  steering.py
src/utils/: config.py
tests/: conftest.py
tests/test_audio/: test_harmonic_math.py
tests/test_core/: test_bridge.py  test_hooks.py  test_leak_leak_rigorous.py  test_steering.py
tests/test_integration/: test_audio_thread.py
