[project]
name = "llm-auditory-monitor"
version = "0.1.0"
description = "Real-time auditory monitoring of LLM latent space to detect hallucinations."
authors = [{ name = "Staff Engineer", email = "staff@example.com" }]
dependencies = [
    "torch",
    "numpy",
    "pyo",
    "pysoundfile",
    "transformers",
    "scipy"
]
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "hypothesis",
    "mypy",
    "ruff"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"
